--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </form>
         <main>
             <h1>Harare</h1>
-            <footer>Coded by <a href="#">Moisha Ndlovu</a> , open source on <a href="https://github.com/Maymoiz/moisha-weather-app"> Github</a> and hosted on <a href="#">Netlify</a></footer>
+            <footer>Coded by <a href="https://github.com/Maymoiz">Moisha Ndlovu</a> , open source on <a href="https://github.com/Maymoiz/moisha-weather-app"> Github</a> and hosted on <a href="#">Netlify</a></footer>
         </main>
     </header>
 </body>
