--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <header>
         <form >
             <input type="search" placeholder="Enter City..." required>
-            <input type="submit" value="search">
+            <input type="submit" value="Search">
         </form>
         <main>
             <h1>Harare</h1>
-            <footer>Coded by <a href="https://github.com/Maymoiz" target="_blank">Moisha Ndlovu</a> , open source on <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> Github</a> and hosted on <a href="https://moisha-weather-app.netlify.app" target="_blank">Netlify</a></footer>
+            <p><div>Saturday 24 May 2025</div><br>
+                <Time>23:15</Time><br>
+                Humidity:<strong>68%</strong>   Wind:<strong>3km/hr</strong>
+</p>
+<div>🌤 25°C</div><br>
+            <footer>This project was coded by <a href="https://github.com/Maymoiz" target="_blank">Moisha Ndlovu</a>, and is <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> open-sourced on Github</a> and  <a href="https://moisha-weather-app.netlify.app" target="_blank"> hosted on Netlify</a></footer>
         </main>
     </header>
 </body>
