--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cal+Sans&family=Handjet:wght@100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&family=Tagesschrift&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <form >
             <input type="search" placeholder="Enter City..." required>
             <input type="submit" value="Search">
         </form>
+    </header>
         <main>
             <h1>Harare</h1>
             <p><div>Saturday 24 May 2025</div><br>
@@ -20,6 +26,6 @@
 <div>🌤 25°C</div><br>
             <footer>This project was coded by <a href="https://github.com/Maymoiz" target="_blank">Moisha Ndlovu</a>, and is <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> open-sourced on Github</a> and  <a href="https://moisha-weather-app.netlify.app" target="_blank"> hosted on Netlify</a></footer>
         </main>
-    </header>
+    </div>
 </body>
 </html>
