--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
     <header>
-        <form >
-            <input type="search" placeholder="Enter City..." required>
-            <input type="submit" value="Search">
+        <form  class="search-form">
+            <input type="search" placeholder="Enter City..." required class="search-input">
+            <input type="submit" value="Search" class="search-button">
         </form>
     </header>
         <main>
