moved the h1 and replaced the paragraph with a div, and added a class to the div

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         </form>
     </header>
         <main>
-            <h1>Harare</h1>
-            <p><div>Saturday 24 May 2025</div><br>
+            <h1>Harare</h1><br><br>
+            <div class="weather-app">
+            <div>Saturday 24 May 2025<br>
                 <Time>23:15</Time><br>
                 Humidity:<strong>68%</strong>   Wind:<strong>3km/hr</strong>
-</p>
+            </div>
 <div>🌤 25°C</div><br>
+            </div>
             <footer>This  project  was  coded  by  <a href="https://github.com/Maymoiz" target="_blank">Moisha  Ndlovu</a>, and is <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> open-sourced  on  Github</a>  and   <a href="https://moisha-weather-app.netlify.app" target="_blank"> hosted on Netlify</a></footer>
         </main>
     </div>
