Added CSS to the main

--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
         <main>
             <h1>Harare</h1><br><br>
             <div class="weather-app">
-            <div>Saturday 24 May 2025<br>
-                <Time>23:15</Time><br>
-                Humidity:<strong>68%</strong>   Wind:<strong>3km/hr</strong>
+            <div class="app-details">Saturday 24 May 2025 <br>Time: 13:05<br><br> 
+                
+                Humidity: <strong>68%</strong>  , Wind: <strong>3km/hr</strong>
             </div>
-<div>🌤 25°C</div><br>
-            </div>
-            <footer>This  project  was  coded  by  <a href="https://github.com/Maymoiz" target="_blank">Moisha  Ndlovu</a>, and is <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> open-sourced  on  Github</a>  and   <a href="https://moisha-weather-app.netlify.app" target="_blank"> hosted on Netlify</a></footer>
+<div class="temp-container">
+    <span class="temp-icon">🌤 </span>
+    <span class="app-temp">20</span> 
+    <span class="temp-unit">℃</span>
+            </div><br><br>
+            
         </main>
+        <footer>This  project  was  coded  by  <a href="https://github.com/Maymoiz" target="_blank">Moisha  Ndlovu</a>, and is <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> open-sourced  on  Github</a>  and 
+                  <a href="https://moisha-weather-app.netlify.app" target="_blank"> hosted on Netlify</a></footer>
     </div>
 </body>
 </html>
