--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
     <header>
-        <form  class="search-form">
+        <form  class="search-form" id="search-form">
             <input type="search" placeholder="Enter City..." required class="search-input">
             <input type="submit" value="Search" class="search-button">
         </form>
@@ -34,5 +34,6 @@
         <footer>This  project  was  coded  by  <a href="https://github.com/Maymoiz" target="_blank">Moisha  Ndlovu</a>, and is <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> open-sourced  on  Github</a>  and 
                   <a href="https://moisha-weather-app.netlify.app" target="_blank"> hosted on Netlify</a></footer>
     </div>
+    <script src="javascript.js"></script>
 </body>
 </html>
