Added functionality to my search engine
selected the form and h1 in javascript

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="container">
     <header>
         <form  class="search-form" id="search-form">
-            <input type="search" placeholder="Enter City..." required class="search-input">
-            <input type="submit" value="Search" class="search-button">
+            <input type="search" placeholder="Enter City..." required class="search-input" id="search-input">
+            <input type="submit" value="Search" class="search-button" id="search-button">
         </form>
     </header>
         <main>
-            <h1>Harare</h1><br><br>
+            <h1 id="weather-city">Harare</h1><br><br>
             <div class="weather-app">
             <div class="app-details">Saturday 24 May 2025 <br>Time: 13:05<br><br> 
                 
