added API to the search engine,allowing it to display the correct weather and city searched

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </form>
     </header>
         <main>
-            <h1 id="weather-city">Harare</h1><br><br>
+            <h1 id="weather-city"></h1><br><br>
             <div class="weather-app">
             <div class="app-details">Saturday 24 May 2025 <br>Time: 13:05<br><br> 
                 
@@ -27,7 +27,7 @@
             </div>
 <div class="temp-container">
     <span class="temp-icon">🌤 </span>
-    <span class="app-temp">20</span> 
+    <span class="app-temp" id="app-temp"></span> 
     <span class="temp-unit">℃</span>
             </div><br><br>
             
