--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         </form>
     </header>
         <main>
-            <h1 id="weather-city"></h1><br><br>
+            <h1 id="weather-city">Pretoria</h1><br><br>
             <div class="weather-app">
-            <div class="app-details">Saturday 24 May 2025 <br>Time: 13:05<br><br> 
+            <div class="app-details">Saturday 24 May 2025<br>
+                <span id="discription"></span>
+                 <br>Time: 13:05<br><br> 
                 
                 Humidity: <strong>68%</strong>  , Wind: <strong>3km/hr</strong>
             </div>
