--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <main>
             <h1 id="weather-city">Pretoria</h1><br><br>
             <div class="weather-app">
-            <div class="app-details">Saturday 24 May 2025<br>
-                <span id="discription"></span>
-                 <br>Time: 13:05<br><br> 
+            <div class="app-details">
+                <span id="time"></span>, 
+                <span id="description"></span><br><br>
                 
-                Humidity: <strong>68%</strong>  , Wind: <strong>3km/hr</strong>
+Humidity: <strong id="humidity"></strong>   Wind: <strong id="wind"></strong>
             </div>
 <div class="temp-container">
     <span class="temp-icon">🌤 </span>
