--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 Humidity: <strong id="humidity"></strong>   Wind: <strong id="wind"></strong>
             </div>
 <div class="temp-container">
-    <span class="temp-icon">🌤 </span>
+    <span id="icon">
+        <img class="temp-icon"
+        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" alt="broken-clouds-icon">
+    </span>
     <span class="app-temp" id="app-temp"></span> 
     <span class="temp-unit">℃</span>
             </div><br><br>
