--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@ Humidity: <strong id="humidity"></strong>   Wind: <strong id="wind"></strong>
     <span class="temp-unit">℃</span>
             </div><br>
         </main><br><br>
-        <section class="forecast">
-                <div ><span class="fore-day">Tue</span> <br> <span class="fore-icon">🌤</span><br> <span class="fore-temp"><b>15°</b> 9° </span></div>
-                <div><span class="fore-day"> Wed</span><br> <span class="fore-icon">☀</span><br><span class="fore-temp"><b>25°</b> 24°</span></div>
-                <div><span class="fore-day">Thu</span> <br><span class="fore-icon"> 🌤</span><br> <span class="fore-temp"> <b>18°</b> 16°</span></div>
-                <div><span class="fore-day">Fri</span><br><span class="fore-icon"> 🌤</span><br><span class="fore-temp"><b>20°</b> 15°</span></div>
-            
+        <section class="forecast" id="forecast">     
         </section><br><br>
         <footer>This  project  was  coded  by  <a href="https://github.com/Maymoiz" target="_blank">Moisha  Ndlovu</a>, and is <a href="https://github.com/Maymoiz/moisha-weather-app" target="_blank"> open-sourced  on  Github</a>  and 
                   <a href="https://moisha-weather-app.netlify.app" target="_blank"> hosted on Netlify</a></footer>
