--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video autoplay muted loop id="background-video">
+    <source src="https://videos.pexels.com/video-files/1851190/1851190-uhd_2560_1440_25fps.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
     <div class="container">
     <header>
         <form  class="search-form" id="search-form">
